2011-02-11  Martin Helmich <m.helmich@mittwald.de>

	* Release of mm_forum_import 1.0.1

2011-02-08  Martin Helmich <m.helmich@mittwald.de>

	* [~TASK]: Added ChangeLog file to SVN
	* [~TASK]: Compatibility with Extbase 1.3.0 (fixes issue #12881)